--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -19,7 +19,7 @@
 /* Import Modules */
 @import
     'modules/global/_module',
-    'modules/whitespace/_module',
+    'modules/space/_module',
     'modules/layout/_module',
     'modules/media/_module',
     'modules/states/_module',
